# multitenant-inspection-prediction

./: .gitignore  README.md  SETUP.md  pyproject.toml
_code/: 01_replicate_bottom10.ipynb
_docs/: chelsea_methodology.md  data_dictionary.md  github_workflow.md
